Update holding page and email signature with new logos and icons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mezcalomano - Coming Soon</title>
+    <link rel="icon" type="image/png" href="Logos/icon_20x20px.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <h1 class="logo">MEZCALOMANO</h1>
+            <img src="Logos/email_sig_180x40px.png" alt="MEZCALÓMANO" class="logo-img">
         </header>
         <main>
             <section class="hero">
