--- a/email_signature.html
+++ b/email_signature.html
@@ -1,11 +1,18 @@
 <div style="font-family: 'Source Sans Pro', Arial, sans-serif; color: #2c1810; line-height: 1.5;">
-    <p style="margin: 0; font-weight: bold; font-size: 18px;">Mezcalomano</p>
-    <p style="margin: 0; font-style: italic; color: #d4af37;">Artisanal Spirit & Timeless Tradition</p>
+    <div style="margin-bottom: 10px;">
+        <img src="Logos/email_sig_180x40px.png" alt="MEZCALÓMANO" width="180" height="40" style="display: block;">
+    </div>
+    <p style="margin: 0; font-style: italic; color: #7d7d6a; font-size: 14px;">Artisanal Spirit & Timeless Tradition</p>
     
-    <div style="margin-top: 15px; border-top: 1px solid #eee; padding-top: 10px;">
-        <p style="margin: 0;"><strong>Kimber Sykes</strong></p>
-        <p style="margin: 0; font-size: 14px;"><a href="mailto:hola@mezcalomano.com" style="color: #2c1810; text-decoration: none;">hola@mezcalomano.com</a></p>
-        <p style="margin: 0; font-size: 14px;"><a href="https://mezcalomano.com" style="color: #2c1810; text-decoration: none;">www.mezcalomano.com</a></p>
+    <div style="margin-top: 15px; border-top: 1px solid #eee; padding-top: 10px; display: flex; align-items: center;">
+        <div style="margin-right: 10px;">
+            <img src="Logos/icon_20x20px.png" alt="" width="20" height="20" style="display: block;">
+        </div>
+        <div>
+            <p style="margin: 0;"><strong>Kimber Sykes</strong></p>
+            <p style="margin: 0; font-size: 14px;"><a href="mailto:hola@mezcalomano.com" style="color: #2c1810; text-decoration: none;">hola@mezcalomano.com</a></p>
+            <p style="margin: 0; font-size: 14px;"><a href="https://mezcalomano.com" style="color: #2c1810; text-decoration: none;">www.mezcalomano.com</a></p>
+        </div>
     </div>
     
     <div style="margin-top: 10px;">
