Update fonts to Open Sans and add brand-font class for Gotham Condensed

--- a/email_signature.html
+++ b/email_signature.html
@@ -1,4 +1,4 @@
-<div style="font-family: 'Source Sans Pro', Arial, sans-serif; color: #2c1810; line-height: 1.5;">
+<div style="font-family: 'Open Sans', Arial, sans-serif; color: #2c1810; line-height: 1.5;">
     <div style="margin-bottom: 10px;">
         <img src="Logos/email_sig_180x40px.png" alt="MEZCALÓMANO" width="180" height="40" style="display: block;">
     </div>
@@ -9,9 +9,9 @@
             <img src="Logos/icon_20x20px.png" alt="" width="20" height="20" style="display: block;">
         </div>
         <div>
-            <p style="margin: 0;"><strong>Kimber Sykes</strong></p>
-            <p style="margin: 0; font-size: 14px;"><a href="mailto:hola@mezcalomano.com" style="color: #2c1810; text-decoration: none;">hola@mezcalomano.com</a></p>
-            <p style="margin: 0; font-size: 14px;"><a href="https://mezcalomano.com" style="color: #2c1810; text-decoration: none;">www.mezcalomano.com</a></p>
+            <p style="margin: 0; font-family: 'Open Sans', sans-serif;"><strong>Kimber Sykes</strong></p>
+            <p style="margin: 0; font-size: 14px; font-family: 'Open Sans', sans-serif;"><a href="mailto:hola@mezcalomano.com" style="color: #2c1810; text-decoration: none;">hola@mezcalomano.com</a></p>
+            <p style="margin: 0; font-size: 14px; font-family: 'Open Sans', sans-serif;"><a href="https://mezcalomano.com" style="color: #2c1810; text-decoration: none;">www.mezcalomano.com</a></p>
         </div>
     </div>
     
