--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -25,7 +25,7 @@
             </section>
         </main>
         <footer>
-            <p>&copy; 2026 Mezcalomano. All rights reserved.</p>
+            <p>&copy; 2026 <span class="brand-font">Mezcalómano</span>. All rights reserved.</p>
         </footer>
     </div>
 </body>
