Switch to SVG logos: wordmark and logomark

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mezcalomano - Coming Soon</title>
-    <link rel="icon" type="image/png" href="Logos/icon_20x20px.png">
+    <link rel="icon" type="image/svg+xml" href="Logos/Logomark_clear.svg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="Logos/email_sig_180x40px.png" alt="MEZCALÓMANO" class="logo-img">
+            <img src="Logos/wordmark_clear.svg" alt="MEZCALÓMANO" class="logo-img">
         </header>
         <main>
             <section class="hero">
