Update email signature with live URLs

--- a/email_signature.html
+++ b/email_signature.html
@@ -1,12 +1,12 @@
 <div style="font-family: 'Open Sans', Arial, sans-serif; color: #2c1810; line-height: 1.5;">
     <div style="margin-bottom: 10px;">
-        <img src="Logos/email_sig_180x40px.png" alt="MEZCALÓMANO" width="180" height="40" style="display: block;">
+        <img src="https://mezcalomano.com/Logos/email_sig_180x40px.png" alt="MEZCALÓMANO" width="180" height="40" style="display: block;">
     </div>
     <p style="margin: 0; font-style: italic; color: #7d7d6a; font-size: 14px;">Artisanal Spirit & Timeless Tradition</p>
     
     <div style="margin-top: 15px; border-top: 1px solid #eee; padding-top: 10px; display: flex; align-items: center;">
         <div style="margin-right: 10px;">
-            <img src="Logos/icon_20x20px.png" alt="" width="20" height="20" style="display: block;">
+            <img src="https://mezcalomano.com/Logos/icon_20x20px.png" alt="" width="20" height="20" style="display: block;">
         </div>
         <div>
             <p style="margin: 0; font-family: 'Open Sans', sans-serif;"><strong>Kimber Sykes</strong></p>
