Update signature contact name and add email assets folder

--- a/mezcalomano-signature.html
+++ b/mezcalomano-signature.html
@@ -50,7 +50,7 @@
                                 <img src="https://mezcalomano.com/assets/email/icon_20x20px.png" alt="" width="20" height="20" style="display: block;">
                             </td>
                             <td style="vertical-align: top;">
-                                <p style="margin: 0; font-family: Arial, Helvetica, sans-serif; color: #2c1810;"><strong>Siona and Kimber</strong></p>
+                                <p style="margin: 0; font-family: Arial, Helvetica, sans-serif; color: #2c1810;"><strong>MEZCALÓMANO</strong></p>
                                 <p style="margin: 0; font-size: 14px; font-family: Arial, Helvetica, sans-serif; color: #2c1810;">
                                     <a href="mailto:hola@mezcalomano.com" style="color: #2c1810; text-decoration: none;">hola@mezcalomano.com</a>
                                 </p>
@@ -72,7 +72,7 @@
     MEZCALÓMANO
     Beyond Espadín
     
-    Siona and Kimber
+    MEZCALÓMANO
     hola@mezcalomano.com
     mezcalomano.com
     -->
