Update tagline to Beyond Espadin on holding page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
         <main>
             <section class="hero">
-                <h2>Artisanal spirit, timeless tradition.</h2>
+                <h2>Beyond Espadín</h2>
                 <p>We are currently crafting our digital experience. Stay tuned for the finest Mezcal selections.</p>
                 <div class="cta">
                     <a href="mailto:hola@mezcalomano.com" class="button">Contact Us</a>
