Update to use fullmark logo, brand colors, and Open Sans throughout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="Logos/wordmark_clear.svg" alt="MEZCALÓMANO" class="logo-img">
+            <img src="Logos/Fullmark_1200x600.svg" alt="MEZCALÓMANO" class="logo-img">
         </header>
         <main>
             <section class="hero">
