--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         </header>
         <main>
             <section class="hero">
-                <h2>Beyond Espadín</h2>
-                <p>We are currently crafting our digital experience. Stay tuned for the finest Mezcal selections.</p>
+                <p>Coming Soon</p>
                 <div class="cta">
                     <a href="mailto:hola@mezcalomano.com" class="button">Contact Us</a>
                 </div>
