Wrap main content to keep centered while footer stays at bottom in box

--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <img src="/Logos/Fullmark_1200x600.svg" alt="MEZCALÓMANO" class="logo-img">
-        </header>
-        <main>
-            <section class="hero">
-                <p>Coming Soon</p>
-                <div class="cta">
-                    <a href="mailto:hola@mezcalomano.com" class="button">Contact Us</a>
-                </div>
-            </section>
-        </main>
+        <div class="content-wrapper">
+            <header>
+                <img src="/Logos/Fullmark_1200x600.svg" alt="MEZCALÓMANO" class="logo-img">
+            </header>
+            <main>
+                <section class="hero">
+                    <p>Coming Soon</p>
+                    <div class="cta">
+                        <a href="mailto:hola@mezcalomano.com" class="button">Contact Us</a>
+                    </div>
+                </section>
+            </main>
+        </div>
         <footer>
             <p>&copy; 2026 <span class="brand-font">Mezcalómano</span>. All rights reserved.</p>
         </footer>
