--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             </header>
             <main>
                 <section class="hero">
-                    <p>Coming Soon</p>
+                    <h1>MEZCALÓMANO EXISTS TO TAKE PEOPLE BEYOND ESPADÍN</h1>
+                    <p>For mezcal lovers and the mezcal-curious, Mezcalómano creates design-driven goods that bring the spirit's hidden diversity to the table, featuring 40 agave plants that make mezcal so rich, complex, and endlessly fascinating.</p>
+                    <p>We're here to spark curiosity, celebrate every spiky species, and bring more joy (and mezcal knowledge) to your next pour. Life's too short for just one agave - go beyond espadín.</p>
                     <div class="cta">
                         <a href="mailto:hola@mezcalomano.com" class="button">Contact Us</a>
                     </div>
