Set logo to 180px wide with auto height for proper downscaling

--- a/mezcalomano-signature.html
+++ b/mezcalomano-signature.html
@@ -34,7 +34,7 @@
         <table cellpadding="0" cellspacing="0" border="0" style="font-family: Arial, Helvetica, sans-serif; color: #2c1810; line-height: 1.5;">
             <tr>
                 <td style="padding-bottom: 10px;">
-                    <img src="https://mezcalomano.com/Logos/email_sig_180x40px.png" alt="MEZCALÓMANO" width="180" height="40" style="display: block;">
+                    <img src="https://mezcalomano.com/Logos/email_sig_180x40px.png" alt="MEZCALÓMANO" width="180" style="display: block; max-width: 180px; height: auto;">
                 </td>
             </tr>
             <tr>
